# visual_odometry

./: .gitignore  CMakeLists.txt  README.md  compare_with_gt.py  keyframe_selector.cpp  keyframe_selector.h  local_mapping.cpp  local_mapping.h  loop_closing.cpp  loop_closing.h  main.cpp  map.cpp  map.h  pose_optimizer.cpp  safe_queue.h  slide_window.cpp  slide_window.h  stereo_vo.cpp  stereo_vo.h  stereo_vo.hpp  system.cpp  system.h  tracking.cpp  tracking.h  trajectory.txt  重构说明文档.md
src/Stereovo_ros2/: CMakeLists.txt  package.xml
src/Stereovo_ros2/config/: kitti_config04-12.yaml
src/Stereovo_ros2/include/: Camera.h  FeatureDetector.h  Frame.h  KeyFrame.h  Map.h  MapPoint.h  Optimizer.h  Tracking.h  TrajectoryWriter.h
src/Stereovo_ros2/launch/: Stereovo_launch.py
src/Stereovo_ros2/rviz2/: deafult.rviz
src/Stereovo_ros2/src/: Camera.cpp  FeatureDetector.cpp  Frame.cpp  KeyFrame.cpp  Map.cpp  MapPoint.cpp  Optimizer.cpp  Parameters.cpp  Stereovo_node.cpp  Tracking.cpp
src/stereovo_ros2/: CMakeLists.txt  package.xml
src/stereovo_ros2/backend/: Optimizer.cpp  Optimizer.h
src/stereovo_ros2/config/: kitti_config00-02.yaml  kitti_config03.yaml  kitti_config04-12.yaml
src/stereovo_ros2/config/kitti/: kitti_config03.yaml
src/stereovo_ros2/core/: FeatureDetector.cpp  FeatureDetector.h  Frame.cpp  KeyFrame.cpp  KeyFrame.h  LoopClosing.cpp  LoopClosing.h  Map.cpp  Map.h  MapPoint.cpp  MapPoint.h  Optimizer.cpp  Optimizer.h  Tracking.cpp  Tracking.h
src/stereovo_ros2/include/: FeatureDetector.h  Frame.h  KeyFrame.h  Map.h  Optimizer.h
src/stereovo_ros2/launch/: stereovo_launch.py
src/stereovo_ros2/rviz2/: deafult.rviz
src/stereovo_ros2/src/: FeatureDetector.cpp  Frame.cpp  KeyFrame.cpp  MapPoint.cpp  Optimizer.cpp  Stereovo_node.cpp  stereovo_node.cpp
src/stereovo_ros2/utils/: Camera.cpp  Camera.h  Parameters.cpp  Parameters.h
src/stereovo_ros2/yolo/: yolo_seg_detector.cpp  yolo_seg_detector.h
src/tensorrtx/csrnet/: macros.h
src/tensorrtx/resnet/: CMakeLists.txt
src/tensorrtx/superpoint/: CMakeLists.txt
src/tensorrtx/yolov8/: CMakeLists.txt
stereovo_ros2/include/: Camera.h  Parameters.h  Tracking.h
stereovo_ros2/src/: Camera.cpp  Map.cpp  Tracking.cpp
utils/: feature_utils.h  math_utils.h
